--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,11 @@
 @tailwind utilities;
 
 
+:root {
+  --text-color: '#313638';
+  --main-bg-color: "#f5f5f5"
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -15,11 +20,42 @@ body {
   overflow-x: hidden;
 }
 
-
-
 a {
   color: inherit;
   text-decoration: none;
 }
 
+/* Custom Fonts */
+@font-face {
+  font-family: "Agustina Regular";
+  font-style: normal;
+  font-weight: normal;
+  src: local("Agustina Regular"),
+    url("../public/fonts/Agustina.woff") format("woff");
+}
 
+@font-face {
+  font-family: "GoogleSans-Regular";
+  font-style: normal;
+  font-weight: normal;
+  src: local("GoogleSans-Regular"),
+    url("../public/fonts/GoogleSans-Regular.ttf") format("ttf");
+}
+
+.font-AgustinaRegular {
+  font-family: 'Agustina Regular', sans-serif;
+}
+
+.font-GoogleSans-Regular {
+  font-family: 'GoogleSans-Regular', sans-serif;
+}
+
+* {
+  font-family: 'GoogleSans-Regular', sans-serif;
+  @apply text-text-color;
+
+
+}
+/* h1, h2, h3,li{
+  @apply text-text-color;
+} */
