--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,7 +31,7 @@ a {
   font-style: normal;
   font-weight: normal;
   src: local("Agustina Regular"),
-    url("../public/fonts/Agustina.woff") format("woff");
+    url("../public/assets/fonts/Agustina.woff") format("woff");
 }
 
 @font-face {
@@ -39,7 +39,7 @@ a {
   font-style: normal;
   font-weight: normal;
   src: local("GoogleSans-Regular"),
-    url("../public/fonts/GoogleSans-Regular.ttf") format("ttf");
+    url("../public/assets/fonts/GoogleSans-Regular.ttf") format("ttf");
 }
 
 .font-AgustinaRegular {
@@ -50,12 +50,30 @@ a {
   font-family: 'GoogleSans-Regular', sans-serif;
 }
 
-* {
-  font-family: 'GoogleSans-Regular', sans-serif;
-  @apply text-text-color;
-
-
+.main-heading-2xl {
+  font-size: 55px;
 }
-/* h1, h2, h3,li{
+
+.main-heading-xl {
+  font-size: 50px;
+}
+
+.main-heading-lg {
+  font-size: 50px;
+}
+
+.main-heading-md {
+  font-size: 30px;
+}
+
+.main-heading-sm {
+  font-size: 30px;
+}
+.main-heading {
+  font-size: 30px;
+}
+
+h1, h2, h3, h4, h5, h6, p {
+  /* font-family: 'GoogleSans-Regular', sans-serif; */
   @apply text-text-color;
-} */
+}
