--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,7 +6,8 @@
 :root {
   --text-color: '#313638';
   --main-bg-color: "#f5f5f5";
-  --secondary-bg-color: '#F2F2F2'
+  --secondary-bg-color: '#F2F2F2',
+  --card-bg-color: '#fff'
 }
 
 * {
@@ -101,9 +102,25 @@ h1, h2, h3, h4, h5, h6, p {
 }
 
 .animate-slide-in-from-right {
-  animation: slide-in-from-right 1s ease-out forwards;
+  animation: slide-in-from-right 0.5 ease-out backwards;
 }
-/* -------- */
+/* ------------ */
+
+/* Sliding from left side */
+@keyframes slide-in-from-left {
+  0% {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+.animate-slide-in-from-left {
+  animation: slide-in-from-left 0.5s ease-out forwards;
+}
 
 /* Sliding from bottom */
 @keyframes fade-in {
@@ -112,7 +129,7 @@ h1, h2, h3, h4, h5, h6, p {
     transform: translateY(20px);
   }
   100% {
-    opacity: 1;
+    opacity: 4;
     transform: translateY(0);
   }
 }
@@ -122,6 +139,20 @@ h1, h2, h3, h4, h5, h6, p {
   animation: fade-in 0.3s ease-in-out forwards;
 }
 /* ------------ */
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.animate-fade-in {
+  animation: fade-in 1s ease-in-out forwards;
+}
+
 
 
 
